Technology/DevOps/Container/Kubernetes/Research/ProduceConsumePodService/demo/k8n-yaml/filter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: filter-tier
  template:
    metadata:
      labels:
        tier: filter-tier
    spec:
      containers:
      - name: filter
        image: mj753951/filter:demo
        command: ["python"]
        args: ["server.py"]
        ports:
          - containerPort: 5002
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: filter-service
spec:
  type: NodePort
  selector:
    tier: filter-tier
  ports:
  - port: 15002
    targetPort: 5002
