Technology/DevOps/Container/Kubernetes/Research/ProduceConsumePodService/demo/k8n-yaml/generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: generator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: generator-tier
  template:
    metadata:
      labels:
        tier: generator-tier
    spec:
      containers:
      - name: generator
        image: mj753951/generator:demo
        command: ["python"]
        args: ["server.py"]
        ports:
          - containerPort: 5001
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: generator-service
spec:
  type: NodePort
  selector:
    tier: generator-tier
  ports:
  - port: 15001
    targetPort: 5001
